--- a/index.html
+++ b/index.html
@@ -1,78 +1,78 @@
-<li><a href="./posts/1491277208.org">./posts/1491277208.org</a></li>
-<li><a href="./posts/1441478549.org">./posts/1441478549.org</a></li>
-<li><a href="./posts/1425438193.org">./posts/1425438193.org</a></li>
-<li><a href="./posts/1387978974.org">./posts/1387978974.org</a></li>
-<li><a href="./posts/1386758122.org">./posts/1386758122.org</a></li>
-<li><a href="./posts/1380202507.org">./posts/1380202507.org</a></li>
-<li><a href="./posts/1375831980.org">./posts/1375831980.org</a></li>
-<li><a href="./posts/1375831927.org">./posts/1375831927.org</a></li>
-<li><a href="./posts/1375831745.org">./posts/1375831745.org</a></li>
-<li><a href="./posts/1375831636.org">./posts/1375831636.org</a></li>
-<li><a href="./posts/1375831599.org">./posts/1375831599.org</a></li>
-<li><a href="./posts/1375831551.org">./posts/1375831551.org</a></li>
-<li><a href="./posts/1375831492.org">./posts/1375831492.org</a></li>
-<li><a href="./posts/1374425590.org">./posts/1374425590.org</a></li>
-<li><a href="./posts/1372860525.org">./posts/1372860525.org</a></li>
-<li><a href="./posts/1372860486.org">./posts/1372860486.org</a></li>
-<li><a href="./posts/1372860409.org">./posts/1372860409.org</a></li>
-<li><a href="./posts/1372860205.org">./posts/1372860205.org</a></li>
-<li><a href="./posts/1372860146.org">./posts/1372860146.org</a></li>
-<li><a href="./posts/1372860061.org">./posts/1372860061.org</a></li>
-<li><a href="./posts/1372859633.org">./posts/1372859633.org</a></li>
-<li><a href="./posts/1372775460.org">./posts/1372775460.org</a></li>
-<li><a href="./posts/1372222703.org">./posts/1372222703.org</a></li>
-<li><a href="./posts/1371617563.org">./posts/1371617563.org</a></li>
-<li><a href="./posts/1371617544.org">./posts/1371617544.org</a></li>
-<li><a href="./posts/1371524627.org">./posts/1371524627.org</a></li>
-<li><a href="./posts/1371524588.org">./posts/1371524588.org</a></li>
-<li><a href="./posts/1371438706.org">./posts/1371438706.org</a></li>
-<li><a href="./posts/1371438441.org">./posts/1371438441.org</a></li>
-<li><a href="./posts/1371438340.org">./posts/1371438340.org</a></li>
-<li><a href="./posts/1371438285.org">./posts/1371438285.org</a></li>
-<li><a href="./posts/1371437605.org">./posts/1371437605.org</a></li>
-<li><a href="./posts/1371437340.org">./posts/1371437340.org</a></li>
-<li><a href="./posts/1371437054.org">./posts/1371437054.org</a></li>
-<li><a href="./posts/1371436951.org">./posts/1371436951.org</a></li>
-<li><a href="./posts/1371436776.org">./posts/1371436776.org</a></li>
-<li><a href="./posts/1371436533.org">./posts/1371436533.org</a></li>
-<li><a href="./posts/1371436450.org">./posts/1371436450.org</a></li>
-<li><a href="./posts/1371436334.org">./posts/1371436334.org</a></li>
-<li><a href="./posts/1371436150.org">./posts/1371436150.org</a></li>
-<li><a href="./posts/1371435980.org">./posts/1371435980.org</a></li>
-<li><a href="./posts/1371435726.org">./posts/1371435726.org</a></li>
-<li><a href="./posts/1371435541.org">./posts/1371435541.org</a></li>
-<li><a href="./posts/1371435447.org">./posts/1371435447.org</a></li>
-<li><a href="./posts/1371433383.org">./posts/1371433383.org</a></li>
-<li><a href="./posts/1371433007.org">./posts/1371433007.org</a></li>
-<li><a href="./posts/1371432927.org">./posts/1371432927.org</a></li>
-<li><a href="./posts/1371432206.org">./posts/1371432206.org</a></li>
-<li><a href="./posts/1371431687.org">./posts/1371431687.org</a></li>
-<li><a href="./posts/1371431634.org">./posts/1371431634.org</a></li>
-<li><a href="./posts/1371431404.org">./posts/1371431404.org</a></li>
-<li><a href="./posts/1371430317.org">./posts/1371430317.org</a></li>
-<li><a href="./posts/1371430013.org">./posts/1371430013.org</a></li>
-<li><a href="./posts/1371429927.org">./posts/1371429927.org</a></li>
-<li><a href="./posts/1371429858.org">./posts/1371429858.org</a></li>
-<li><a href="./posts/1371429727.org">./posts/1371429727.org</a></li>
-<li><a href="./posts/1371429635.org">./posts/1371429635.org</a></li>
-<li><a href="./posts/1371429563.org">./posts/1371429563.org</a></li>
-<li><a href="./posts/1371429113.org">./posts/1371429113.org</a></li>
-<li><a href="./posts/1371428959.org">./posts/1371428959.org</a></li>
-<li><a href="./posts/1371428823.org">./posts/1371428823.org</a></li>
-<li><a href="./posts/1371428404.org">./posts/1371428404.org</a></li>
-<li><a href="./posts/1371428349.org">./posts/1371428349.org</a></li>
-<li><a href="./posts/1371428237.org">./posts/1371428237.org</a></li>
-<li><a href="./posts/1371428148.org">./posts/1371428148.org</a></li>
-<li><a href="./posts/1371428044.org">./posts/1371428044.org</a></li>
-<li><a href="./posts/1371427836.org">./posts/1371427836.org</a></li>
-<li><a href="./posts/1371427721.org">./posts/1371427721.org</a></li>
-<li><a href="./posts/1371427589.org">./posts/1371427589.org</a></li>
-<li><a href="./posts/1371427448.org">./posts/1371427448.org</a></li>
-<li><a href="./posts/1371427072.org">./posts/1371427072.org</a></li>
-<li><a href="./posts/1371426900.org">./posts/1371426900.org</a></li>
-<li><a href="./posts/1371426715.org">./posts/1371426715.org</a></li>
-<li><a href="./posts/1371426498.org">./posts/1371426498.org</a></li>
-<li><a href="./posts/1371426374.org">./posts/1371426374.org</a></li>
-<li><a href="./posts/1371426155.org">./posts/1371426155.org</a></li>
-<li><a href="./posts/1371426000.org">./posts/1371426000.org</a></li>
-<li><a href="./posts/1371425940.org">./posts/1371425940.org</a></li>
+<li><a href="posts/1491277208.txt">posts/1491277208.txt</a></li>
+<li><a href="posts/1441478549.txt">posts/1441478549.txt</a></li>
+<li><a href="posts/1425438193.txt">posts/1425438193.txt</a></li>
+<li><a href="posts/1387978974.txt">posts/1387978974.txt</a></li>
+<li><a href="posts/1386758122.txt">posts/1386758122.txt</a></li>
+<li><a href="posts/1380202507.txt">posts/1380202507.txt</a></li>
+<li><a href="posts/1375831980.txt">posts/1375831980.txt</a></li>
+<li><a href="posts/1375831927.txt">posts/1375831927.txt</a></li>
+<li><a href="posts/1375831745.txt">posts/1375831745.txt</a></li>
+<li><a href="posts/1375831636.txt">posts/1375831636.txt</a></li>
+<li><a href="posts/1375831599.txt">posts/1375831599.txt</a></li>
+<li><a href="posts/1375831551.txt">posts/1375831551.txt</a></li>
+<li><a href="posts/1375831492.txt">posts/1375831492.txt</a></li>
+<li><a href="posts/1374425590.txt">posts/1374425590.txt</a></li>
+<li><a href="posts/1372860525.txt">posts/1372860525.txt</a></li>
+<li><a href="posts/1372860486.txt">posts/1372860486.txt</a></li>
+<li><a href="posts/1372860409.txt">posts/1372860409.txt</a></li>
+<li><a href="posts/1372860205.txt">posts/1372860205.txt</a></li>
+<li><a href="posts/1372860146.txt">posts/1372860146.txt</a></li>
+<li><a href="posts/1372860061.txt">posts/1372860061.txt</a></li>
+<li><a href="posts/1372859633.txt">posts/1372859633.txt</a></li>
+<li><a href="posts/1372775460.txt">posts/1372775460.txt</a></li>
+<li><a href="posts/1372222703.txt">posts/1372222703.txt</a></li>
+<li><a href="posts/1371617563.txt">posts/1371617563.txt</a></li>
+<li><a href="posts/1371617544.txt">posts/1371617544.txt</a></li>
+<li><a href="posts/1371524627.txt">posts/1371524627.txt</a></li>
+<li><a href="posts/1371524588.txt">posts/1371524588.txt</a></li>
+<li><a href="posts/1371438706.txt">posts/1371438706.txt</a></li>
+<li><a href="posts/1371438441.txt">posts/1371438441.txt</a></li>
+<li><a href="posts/1371438340.txt">posts/1371438340.txt</a></li>
+<li><a href="posts/1371438285.txt">posts/1371438285.txt</a></li>
+<li><a href="posts/1371437605.txt">posts/1371437605.txt</a></li>
+<li><a href="posts/1371437340.txt">posts/1371437340.txt</a></li>
+<li><a href="posts/1371437054.txt">posts/1371437054.txt</a></li>
+<li><a href="posts/1371436951.txt">posts/1371436951.txt</a></li>
+<li><a href="posts/1371436776.txt">posts/1371436776.txt</a></li>
+<li><a href="posts/1371436533.txt">posts/1371436533.txt</a></li>
+<li><a href="posts/1371436450.txt">posts/1371436450.txt</a></li>
+<li><a href="posts/1371436334.txt">posts/1371436334.txt</a></li>
+<li><a href="posts/1371436150.txt">posts/1371436150.txt</a></li>
+<li><a href="posts/1371435980.txt">posts/1371435980.txt</a></li>
+<li><a href="posts/1371435726.txt">posts/1371435726.txt</a></li>
+<li><a href="posts/1371435541.txt">posts/1371435541.txt</a></li>
+<li><a href="posts/1371435447.txt">posts/1371435447.txt</a></li>
+<li><a href="posts/1371433383.txt">posts/1371433383.txt</a></li>
+<li><a href="posts/1371433007.txt">posts/1371433007.txt</a></li>
+<li><a href="posts/1371432927.txt">posts/1371432927.txt</a></li>
+<li><a href="posts/1371432206.txt">posts/1371432206.txt</a></li>
+<li><a href="posts/1371431687.txt">posts/1371431687.txt</a></li>
+<li><a href="posts/1371431634.txt">posts/1371431634.txt</a></li>
+<li><a href="posts/1371431404.txt">posts/1371431404.txt</a></li>
+<li><a href="posts/1371430317.txt">posts/1371430317.txt</a></li>
+<li><a href="posts/1371430013.txt">posts/1371430013.txt</a></li>
+<li><a href="posts/1371429927.txt">posts/1371429927.txt</a></li>
+<li><a href="posts/1371429858.txt">posts/1371429858.txt</a></li>
+<li><a href="posts/1371429727.txt">posts/1371429727.txt</a></li>
+<li><a href="posts/1371429635.txt">posts/1371429635.txt</a></li>
+<li><a href="posts/1371429563.txt">posts/1371429563.txt</a></li>
+<li><a href="posts/1371429113.txt">posts/1371429113.txt</a></li>
+<li><a href="posts/1371428959.txt">posts/1371428959.txt</a></li>
+<li><a href="posts/1371428823.txt">posts/1371428823.txt</a></li>
+<li><a href="posts/1371428404.txt">posts/1371428404.txt</a></li>
+<li><a href="posts/1371428349.txt">posts/1371428349.txt</a></li>
+<li><a href="posts/1371428237.txt">posts/1371428237.txt</a></li>
+<li><a href="posts/1371428148.txt">posts/1371428148.txt</a></li>
+<li><a href="posts/1371428044.txt">posts/1371428044.txt</a></li>
+<li><a href="posts/1371427836.txt">posts/1371427836.txt</a></li>
+<li><a href="posts/1371427721.txt">posts/1371427721.txt</a></li>
+<li><a href="posts/1371427589.txt">posts/1371427589.txt</a></li>
+<li><a href="posts/1371427448.txt">posts/1371427448.txt</a></li>
+<li><a href="posts/1371427072.txt">posts/1371427072.txt</a></li>
+<li><a href="posts/1371426900.txt">posts/1371426900.txt</a></li>
+<li><a href="posts/1371426715.txt">posts/1371426715.txt</a></li>
+<li><a href="posts/1371426498.txt">posts/1371426498.txt</a></li>
+<li><a href="posts/1371426374.txt">posts/1371426374.txt</a></li>
+<li><a href="posts/1371426155.txt">posts/1371426155.txt</a></li>
+<li><a href="posts/1371426000.txt">posts/1371426000.txt</a></li>
+<li><a href="posts/1371425940.txt">posts/1371425940.txt</a></li>
