--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-02-20 Wed 22:05 -->
+<!-- 2019-02-20 Wed 22:55 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -242,10 +242,14 @@ for the JavaScript code in this tag.
 <p>
 This is my home page&#x2026; there are many like it, but this one is mine.
 </p>
+
+<ul class="org-ul">
+<li>Notes from my trip to #OReillySAConf <a href="./posts/2019-orielly-sa-conf.html">./posts/2019-orielly-sa-conf.html</a></li>
+</ul>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: John Hilliard</p>
-<p class="date">Created: 2019-02-20 Wed 22:05</p>
+<p class="date">Created: 2019-02-20 Wed 22:55</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
