--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-02-20 Wed 22:55 -->
+<!-- 2019-02-20 Wed 23:17 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -185,7 +185,7 @@
 <link rel="stylesheet" type="text/css" href="css/mine.css" />
 <meta property="og:title" content="John Hilliard Blog" />
 <meta property="og:description" content="This is my website. There are many like it, but this one is mine" />
-<meta property="og:image" content="img/ascii-john.jpg" />
+<meta property="og:image" content="https://john.dev/img/ascii-john.jpg" />
 <script type="text/javascript">
 /*
 @licstart  The following is the entire license notice for the
@@ -249,7 +249,7 @@ This is my home page&#x2026; there are many like it, but this one is mine.
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: John Hilliard</p>
-<p class="date">Created: 2019-02-20 Wed 22:55</p>
+<p class="date">Created: 2019-02-20 Wed 23:17</p>
 <p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
