--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-02-20 Wed 23:17 -->
+<!-- 2019-02-21 Thu 22:30 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -234,23 +234,27 @@ for the JavaScript code in this tag.
 </script>
 </head>
 <body>
+<div id="preamble" class="status">
+<small>John Hilliard: <a href='https://twitter.com/praetorian'>Twitter</a>, <a href='https://keybase.io/praetoriansentry'>Keybase</a>, <a href='https://www.nextjump.com'>Company</a>, <a href='https://www.flickr.com/photos/praetoriansentry/albums/72157626629989597'>Flickr</a></small>
+</div>
 <div id="content">
 <h1 class="title">./john.dev
 <br>
 <span class="subtitle">Programmer</span>
 </h1>
 <p>
-This is my home page&#x2026; there are many like it, but this one is mine.
+I'm John. This is my website. Welcome to it.
 </p>
 
+<p>
+Writing:
+</p>
 <ul class="org-ul">
 <li>Notes from my trip to #OReillySAConf <a href="./posts/2019-orielly-sa-conf.html">./posts/2019-orielly-sa-conf.html</a></li>
 </ul>
 </div>
 <div id="postamble" class="status">
-<p class="author">Author: John Hilliard</p>
-<p class="date">Created: 2019-02-20 Wed 23:17</p>
-<p class="validation"><a href="http://validator.w3.org/check?uri=referer">Validate</a></p>
+<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2019-02-21 Thu 22:30</small></footer>
 </div>
 </body>
 </html>
