--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-04-02 Tue 22:32 -->
+<!-- 2019-04-16 Tue 23:00 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -250,6 +250,7 @@ I'm John. This is my website. Welcome to it.
 Writing:
 </p>
 <ul class="org-ul">
+<li>Notes and Highlights from Release It <a href="./posts/2019-04-14-release-it-notes.html">./posts/2019-04-14-release-it-notes.html</a></li>
 <li>Emulating an HID Proxcard from Facility Code and Card Number <a href="./posts/2019-04-02-hid-prox.html">./posts/2019-04-02-hid-prox.html</a></li>
 <li>Creating a Simple Go Lambda Function to Save Data to S3 <a href="./posts/2019-03-31-lambda-to-s3-golang.html">./posts/2019-03-31-lambda-to-s3-golang.html</a></li>
 <li>JavaScript Quine With Self Referential CRC32 <a href="./posts/2019-03-04-js-quine.html">./posts/2019-03-04-js-quine.html</a></li>
@@ -259,7 +260,7 @@ Writing:
 </ul>
 </div>
 <div id="postamble" class="status">
-<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2019-04-02 Tue 22:32</small></footer>
+<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2019-04-16 Tue 23:00</small></footer>
 </div>
 </body>
 </html>
