latest minor changes

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2019-04-16 Tue 23:00 -->
+<!-- 2021-12-24 Fri 21:25 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -162,6 +162,19 @@
   .footdef  { margin-bottom: 1em; }
   .figure { padding: 1em; }
   .figure p { text-align: center; }
+  .equation-container {
+    display: table;
+    text-align: center;
+    width: 100%;
+  }
+  .equation {
+    vertical-align: middle;
+  }
+  .equation-label {
+    display: table-cell;
+    text-align: right;
+    vertical-align: middle;
+  }
   .inlinetask {
     padding: 10px;
     border: 2px solid gray;
@@ -191,7 +204,7 @@
 @licstart  The following is the entire license notice for the
 JavaScript code in this tag.
 
-Copyright (C) 2012-2018 Free Software Foundation, Inc.
+Copyright (C) 2012-2020 Free Software Foundation, Inc.
 
 The JavaScript code in this tag is free software: you can
 redistribute it and/or modify it under the terms of the GNU
@@ -249,7 +262,14 @@ I'm John. This is my website. Welcome to it.
 <p>
 Writing:
 </p>
+
+
+
 <ul class="org-ul">
+<li>Postfix Postqueue Parser <a href="./posts/2020-11-28-postfix-postqueue.html">./posts/2020-11-28-postfix-postqueue.html</a></li>
+<li>Sandboxing with systemd <a href="./posts/2020-11-14-systemd-rootdirectory.html">./posts/2020-11-14-systemd-rootdirectory.html</a></li>
+<li>Testing with Gemini Diagnostics <a href="./posts/2020-11-02-gemini-dianostics.html">./posts/2020-11-02-gemini-dianostics.html</a></li>
+<li>Creating a Basic Gemini Server <a href="./posts/2020-11-01-melchior.html">./posts/2020-11-01-melchior.html</a></li>
 <li>Notes and Highlights from Release It <a href="./posts/2019-04-14-release-it-notes.html">./posts/2019-04-14-release-it-notes.html</a></li>
 <li>Emulating an HID Proxcard from Facility Code and Card Number <a href="./posts/2019-04-02-hid-prox.html">./posts/2019-04-02-hid-prox.html</a></li>
 <li>Creating a Simple Go Lambda Function to Save Data to S3 <a href="./posts/2019-03-31-lambda-to-s3-golang.html">./posts/2019-03-31-lambda-to-s3-golang.html</a></li>
@@ -260,7 +280,7 @@ Writing:
 </ul>
 </div>
 <div id="postamble" class="status">
-<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2019-04-16 Tue 23:00</small></footer>
+<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2021-12-24 Fri 21:23</small></footer>
 </div>
 </body>
 </html>
