--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<!-- 2021-12-24 Fri 21:52 -->
+<!-- 2021-12-25 Sat 15:00 -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>./john.dev</title>
@@ -239,8 +239,6 @@ I'm John. This is my website. Welcome to it.
 Writing:
 </p>
 
-
-
 <ul class="org-ul">
 <li>Postfix Postqueue Parser <a href="./posts/2020-11-28-postfix-postqueue.html">./posts/2020-11-28-postfix-postqueue.html</a></li>
 <li>Sandboxing with systemd <a href="./posts/2020-11-14-systemd-rootdirectory.html">./posts/2020-11-14-systemd-rootdirectory.html</a></li>
@@ -254,9 +252,46 @@ Writing:
 <li>Creating ASCII Art from a video <a href="./posts/2019-02-23-ascii-face.html">./posts/2019-02-23-ascii-face.html</a></li>
 <li>Notes from my trip to #OReillySAConf <a href="./posts/2019-orielly-sa-conf.html">./posts/2019-orielly-sa-conf.html</a></li>
 </ul>
+
+<div id="outline-container-org89d1263" class="outline-2">
+<h2 id="org89d1263"><span class="section-number-2">1</span> Smart Contracts</h2>
+<div class="outline-text-2" id="text-1">
+</div>
+<div id="outline-container-org1a013d5" class="outline-3">
+<h3 id="org1a013d5"><span class="section-number-3">1.1</span> BlockMazing</h3>
+<div class="outline-text-3" id="text-1-1">
+<ul class="org-ul">
+<li><a href="https://etherscan.io/address/0x222a11ac067da39b12bf221717bfab75e3d374b4">https://etherscan.io/address/0x222a11ac067da39b12bf221717bfab75e3d374b4</a></li>
+<li><a href="https://opensea.io/collection/mze">https://opensea.io/collection/mze</a></li>
+<li><a href="https://blockmazing.com/">https://blockmazing.com/</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org648eb28" class="outline-3">
+<h3 id="org648eb28"><span class="section-number-3">1.2</span> ASCII Wall</h3>
+<div class="outline-text-3" id="text-1-2">
+<ul class="org-ul">
+<li><a href="https://etherscan.io/address/0x484e02fe62539871651263cb1a3952e4b95012f0">https://etherscan.io/address/0x484e02fe62539871651263cb1a3952e4b95012f0</a></li>
+<li><a href="https://opensea.io/collection/asciiwall/">https://opensea.io/collection/asciiwall/</a></li>
+<li><a href="https://ascii.j4.is/">https://ascii.j4.is/</a></li>
+</ul>
+</div>
+</div>
+
+<div id="outline-container-org657d282" class="outline-3">
+<h3 id="org657d282"><span class="section-number-3">1.3</span> Photos</h3>
+<div class="outline-text-3" id="text-1-3">
+<ul class="org-ul">
+<li><a href="https://polygonscan.com/address/0x607612adc3c59f6f2096758d8181f700288f230c">https://polygonscan.com/address/0x607612adc3c59f6f2096758d8181f700288f230c</a></li>
+<li><a href="https://opensea.io/collection/praetorianphoto">https://opensea.io/collection/praetorianphoto</a></li>
+</ul>
+</div>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
-<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2021-12-24 Fri 21:23</small></footer>
+<footer><small>Built with <a href='https://orgmode.org/'>Org-Mode</a>: 2021-12-25 Sat 15:00</small></footer>
 </div>
 </body>
 </html>
